[project]
name = "machinelearningfinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.18.0",
    "huggingface-hub>=1.19.0",
    "numpy",
    "scikit-learn>=1.7.2",
    "torch",
    "transformers>=5.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
